--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
+    "@angular/cdk": "^16.0.4",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
@@ -18,7 +19,16 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "bootstrap": "^5.3.0",
+    "jquery": "^3.7.0",
+    "lottie-web": "^5.12.0",
+    "ngx-lottie": "^10.0.0",
+    "ngx-scrolltop": "^6.0.0",
+    "popper.js": "^1.16.1",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.0.0",
     "rxjs": "~7.8.0",
+    "scrollreveal": "^4.0.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
